--- a/config/locales/eng/models.yml
+++ b/config/locales/eng/models.yml
@@ -94,15 +94,15 @@ eng:
       journal_entry_line:  #?
         closed: "Closed" #?
       land_parcel:
-        # area_measure: "Surface"
         # born_at: "Date de création"
         children: "Sub-plots"
         number: "CAP Number or plot number"
+        # real_quantity: "Surface"
       land_parcel_group:
-        # area_measure: "Surface"
         # born_at: "Date de création"
         # children: "Sous-îlots"
         # identification_number: "Numéro PAC ou numéro d'ilôts"
+        # real_quantity: "Surface"
       mandate:
         family: "Family"
       matter:
@@ -562,7 +562,7 @@ eng:
     acquisition_amount: "Acquisition amount"
     active: "Active"
     active_prices: "Active prices"
-    # activity: "Activity"
+    # activity: "Activité"
     activity_code: "Activity code"
     actual_number: "Actual number"
     address: "Address"
@@ -1036,7 +1036,7 @@ eng:
     nic: "Nic"
     node: "Node"
     nodes: "Nodes"
-    # nomen: "Nomen"
+    # nomen: "Référence"
     number: "Number"
     number_format: "Number format"
     number_increment: "Number increment"
@@ -1469,6 +1469,24 @@ eng:
         stocks: "Stocks"
         transport: "Transport"
     drug_admission_path: #?
+    entity:
+      nature:
+        # association: "Association"
+        # civil_society: "Société civile"
+        # collectivity: "Collectivité"
+        # company: "Société"
+        # doctor: "Docteur"
+        # economic_interest_group: "Groupement d'intérêt économique"
+        # entity: "Entité"
+        # foundation: "Fondation"
+        # legal_entity: "Personne morale"
+        # madam: "Madame"
+        # person: "Personne"
+        # professor: "Professeur"
+        # public_establisment: "Établissement public"
+        # public_interest_group: "Groupement d'intérêt public"
+        # sir: "Monsieur"
+        # syndicate: "Syndicat"
     entity_address:
       canal:
         # email: "E-mail"
@@ -1522,6 +1540,24 @@ eng:
     per_animal_unit: #?
     per_duration_time_unit: #?
     per_frequency_time_unit: #?
+    procedure:
+      nomen:
+        # animal_birth: "Naissance d'un animal"
+        # calving_one: "Vêlage unique"
+        # calving_twin: "Vêlage jumeaux"
+        # chemical_treatment: "Traitement chimique"
+        # mineral_fertilizing: "Fertilisation minérale"
+        # organic_fertilizing: "Fertilisation organique"
+        # plowing: "Labour"
+        # seed_harvest: "Moisson"
+        # sowing: "Semis"
+        # superficial_plowing: "Hersage"
+        # wheat_crop: "Culture de blé (standard)"
+      state:
+        # done: "Réalisée"
+        # in_progress: "En cours"
+        # squeezed: "Non réalisée"
+        # undone: "Pas encore réalisée"
     product:
       arrival_reasons:
         # birth: "Naissance"
@@ -1535,6 +1571,10 @@ eng:
         # sale: "Vente"
       income_reasons: #?
       outgone_reasons: #?
+      unit:
+        # celsius: "celsius"
+        # square_meter: "mètre carré"
+        # unity: "unité"
     product_indicator:
       nature:
         # boolean: "Case à cocher"
