--- a/config/locales/spa/models.yml
+++ b/config/locales/spa/models.yml
@@ -82,15 +82,15 @@ spa:
         # closed: "Cloturée"
       journal_entry_line: #?
       land_parcel:
-        # area_measure: "Surface"
         # born_at: "Date de création"
         # children: "Sous-parcelle"
         # number: "Numéro PAC ou numéro de parcelle"
+        # real_quantity: "Surface"
       land_parcel_group:
-        # area_measure: "Surface"
         # born_at: "Date de création"
         # children: "Sous-îlots"
         # identification_number: "Numéro PAC ou numéro d'ilôts"
+        # real_quantity: "Surface"
       mandate:
         # family: "Famille"
       matter:
@@ -459,7 +459,7 @@ spa:
     # acquisition_amount: "Montant des acquisition"
     # active: "Utilisable"
     # active_prices: "Prix en cours"
-    # activity: "Activity"
+    # activity: "Activité"
     # activity_code: "Code APE/NAF"
     # actual_number: "Numéro en cours"
     # address: "Adresse"
@@ -892,7 +892,7 @@ spa:
     # nic: "NIC (Numéro Interne de Classement)"
     # node: "Nœud"
     # nodes: "Nœuds d’extraction"
-    # nomen: "Nomen"
+    # nomen: "Référence"
     # number: "Numéro"
     # number_format: "Format du numéro"
     # number_increment: "Incrément"
@@ -1282,6 +1282,24 @@ spa:
         # stocks: "Stocks"
         # transport: "Transport"
     drug_admission_path: #?
+    entity:
+      nature:
+        # association: "Association"
+        # civil_society: "Société civile"
+        # collectivity: "Collectivité"
+        # company: "Société"
+        # doctor: "Docteur"
+        # economic_interest_group: "Groupement d'intérêt économique"
+        # entity: "Entité"
+        # foundation: "Fondation"
+        # legal_entity: "Personne morale"
+        # madam: "Madame"
+        # person: "Personne"
+        # professor: "Professeur"
+        # public_establisment: "Établissement public"
+        # public_interest_group: "Groupement d'intérêt public"
+        # sir: "Monsieur"
+        # syndicate: "Syndicat"
     entity_address:
       canal:
         # email: "E-mail"
@@ -1332,6 +1350,24 @@ spa:
     per_animal_unit: #?
     per_duration_time_unit: #?
     per_frequency_time_unit: #?
+    procedure:
+      nomen:
+        # animal_birth: "Naissance d'un animal"
+        # calving_one: "Vêlage unique"
+        # calving_twin: "Vêlage jumeaux"
+        # chemical_treatment: "Traitement chimique"
+        # mineral_fertilizing: "Fertilisation minérale"
+        # organic_fertilizing: "Fertilisation organique"
+        # plowing: "Labour"
+        # seed_harvest: "Moisson"
+        # sowing: "Semis"
+        # superficial_plowing: "Hersage"
+        # wheat_crop: "Culture de blé (standard)"
+      state:
+        # done: "Réalisée"
+        # in_progress: "En cours"
+        # squeezed: "Non réalisée"
+        # undone: "Pas encore réalisée"
     product:
       arrival_reasons:
         # birth: "Naissance"
@@ -1345,6 +1381,10 @@ spa:
         # sale: "Vente"
       income_reasons: #?
       outgone_reasons: #?
+      unit:
+        # celsius: "celsius"
+        # square_meter: "mètre carré"
+        # unity: "unité"
     product_indicator:
       nature:
         # boolean: "Case à cocher"
