--- a/config/locales/spa/models.yml
+++ b/config/locales/spa/models.yml
@@ -343,6 +343,7 @@ spa:
       # bank_statement: "Relevé de compte bancaire"
       # bioproduct: "Produit vivant"
       # building: "Lieu de stockage"
+      # building_division: "Pièce"
       # building_room: "Pièce"
       # campaign: "Campagne"
       # cash: "Trésorerie"
@@ -358,6 +359,7 @@ spa:
       # document: "Document"
       # document_archive: "Archive de document"
       # document_template: "Modèle de document"
+      # easement: "Zone primaire"
       # entity: "Personne"
       # entity_address: "Adresse"
       # entity_link: "Lien de personne"
@@ -405,6 +407,7 @@ spa:
       # place: "Lieu"
       # plant: "Plante"
       # preference: "Préférence"
+      # primary_easement: "Zone primaire"
       # primary_zone: "Zone primaire"
       # procedure: "Procédure"
       # procedure_nature: "Type de procédure"
