--- a/config/locales/spa/action.yml
+++ b/config/locales/spa/action.yml
@@ -32,7 +32,7 @@ spa:
       # new: "Nouvelle répartition analytique"
       # show: "Répartition %{id}"
     backend/activity_watchings:
-      # index: "Activité surveillées"
+      # index: "Activités surveillées"
     backend/affairs:
       # index: "Transactions"
       # select: "Ajouter une transaction"
@@ -267,6 +267,7 @@ spa:
       # reports: "Impression, exportation"
       show: "Periodico : %{name} (%{code})"
     backend/kujakus: #?
+    backend/land_parcel_clusters: #?
     backend/land_parcel_groups:
       # edit: "Modifier l'ilôt\_: %{name}"
       # index: "Ilôts"
