--- a/config/locales/eng/action.yml
+++ b/config/locales/eng/action.yml
@@ -25,7 +25,7 @@ eng:
       # new: "Nouvelle répartition analytique"
       # show: "Répartition %{id}"
     backend/activity_watchings:
-      # index: "Activité surveillées"
+      # index: "Activités surveillées"
     backend/affairs:
       # index: "Transactions"
       # select: "Ajouter une transaction"
@@ -270,6 +270,7 @@ eng:
       reports: "Prints, exportations"
       show: "Journal: %{name} (%{code})"
     backend/kujakus: #?
+    backend/land_parcel_clusters: #?
     backend/land_parcel_groups:
       # edit: "Modifier l'ilôt\_: %{name}"
       # index: "Ilôts"
