--- a/config/locales/jpn/action.yml
+++ b/config/locales/jpn/action.yml
@@ -25,7 +25,7 @@ jpn:
       # new: "Nouvelle répartition analytique"
       # show: "Répartition %{id}"
     backend/activity_watchings:
-      # index: "Activité surveillées"
+      # index: "Activités surveillées"
     backend/affairs:
       # index: "Transactions"
       # select: "Ajouter une transaction"
@@ -227,6 +227,7 @@ jpn:
       # reports: "Impression, exportation"
       # show: "Journal\_: %{name} (%{code})"
     backend/kujakus: #?
+    backend/land_parcel_clusters: #?
     backend/land_parcel_groups:
       # edit: "Modifier l'ilôt\_: %{name}"
       # index: "Ilôts"
