--- a/config/locales/fra/models.yml
+++ b/config/locales/fra/models.yml
@@ -1070,9 +1070,11 @@ fra:
     reason: "Motif" #?
     receipt: "Reçu électronique"
     received: "Reçue"
+    # received_at: "Received at"
     receiver_amount: "Montant reçu"
     receiver_cash: "Trésorerie réceptrice"
     receiver_journal_entry: "Écriture de la réception"
+    # recipient: "Recipient"
     reconcilable: "Lettrable"
     record_value: "Enregistrement"
     record_value_type: "Type d’enregistrement"
@@ -1105,7 +1107,7 @@ fra:
     rgt: "Rgt"
     rights: "Droits"
     role: "Rôle de base"
-    roles: "Rôles" #?
+    roles: "Rôles"
     rome: "Code ROME" #?
     root_model: "Racine"
     root_model_name: "Racine"
@@ -1131,6 +1133,8 @@ fra:
     second_stock_move: "Second mouvement de stock" #?
     self_cashes: "Caisses en propre" #?
     self_contacts: "Contacts en propre" #?
+    # sender: "Sender"
+    # sent_at: "Sent at"
     sequences: "Séquences" #?
     serial: "N°Lot"
     serial_number: "Serial number"
@@ -1219,7 +1223,6 @@ fra:
     transporters: "Transporteurs" #?
     transports: "Transports"
     type: "Type"
-    # uid: "Uid"
     # unconfirmed_email: "Unconfirmed email"
     undelivered_quantity: "Reste à livrer"
     unique_tracking: "Numéro unique"
@@ -1252,7 +1255,6 @@ fra:
     vat_subjected: "Vat subjected"
     vat_submissive: "Soumis à la TVA" #?
     # verb: "Verb"
-    # version: "Version"
     virtual: "Virtuel" #?
     virtual_quantity: "Stock virtuel"
     waiting_deliveries: "Livraisons en attente"
