--- a/config/locales/jpn/models.yml
+++ b/config/locales/jpn/models.yml
@@ -157,6 +157,9 @@ jpn:
         # second_building: "Lieu de stockage d’arrivée"
       product_variety:
         # code: "Code race"
+      production:
+        # product_nature: "Produit de référence"
+        # work_unit: "Unité d'oeuvre"
       products_nature: #?
       profession:
         # employees: "Employés"
