--- a/config/locales/arb/action.yml
+++ b/config/locales/arb/action.yml
@@ -31,8 +31,7 @@ arb:
       # index: "Répartitions analytiques"
       # new: "Nouvelle répartition analytique"
       # show: "Répartition %{id}"
-    backend/activity_watchings:
-      # index: "Activités surveillées"
+    backend/activity_watchings: #?
     backend/affairs:
       # index: "Transactions"
       # select: "Ajouter une transaction"
@@ -504,6 +503,7 @@ arb:
       # index: "Chaînes de production"
       # new: "Ajouter une nouvelle chaîne de production"
       # show: "Chaîne de production\_: %{name}"
+    backend/productions: #?
     backend/products:
       edit: "تعديل المنتج : %{name}"
       index: "المنتجات"
