--- a/config/locales/fra/action.yml
+++ b/config/locales/fra/action.yml
@@ -23,11 +23,6 @@ fra:
       index: "Répartitions analytiques"
       new: "Nouvelle répartition analytique"
       show: "Répartition %{id}"
-    backend/activity_watchings:
-      # edit: "Edit backend/activity watching"
-      index: "Activités surveillées"
-      # new: "New backend/activity watching"
-      # show: "Show backend/activity watching"
     backend/affairs:
       # attach: "Attach backend/affair"
       # detach: "Detach backend/affair"
@@ -470,6 +465,11 @@ fra:
       index: "Chaînes de production"
       new: "Ajouter une nouvelle chaîne de production"
       show: "Chaîne de production\_: %{name}"
+    backend/productions:
+      # edit: "Edit backend/production"
+      # index: "Index backend/production"
+      # new: "New backend/production"
+      # show: "Show backend/production"
     backend/products:
       edit: "Modifier un produit"
       index: "Produits"
@@ -586,7 +586,6 @@ fra:
     backend/accounts: "Plan de comptes"
     backend/activities: "Activités"
     backend/activity_repartitions: "Répartitions analytiques"
-    # backend/activity_watchings: "Backend/activity watchings"
     backend/affairs: "Affaires"
     # backend/animal_groups: "Backend/animal groups"
     backend/animals: "Animaux"
@@ -689,6 +688,7 @@ fra:
     backend/production_chain_work_center_uses: "Utilisation des ateliers de chaînes de production"
     backend/production_chain_work_centers: "Atelier de chaînes de production"
     backend/production_chains: "Chaînes de production"
+    # backend/productions: "Backend/productions"
     backend/products: "Produits"
     backend/professions: "Professions"
     backend/purchase_items: "Lignes d’achat"
