--- a/config/locales/spa/action.yml
+++ b/config/locales/spa/action.yml
@@ -31,8 +31,7 @@ spa:
       # index: "Répartitions analytiques"
       # new: "Nouvelle répartition analytique"
       # show: "Répartition %{id}"
-    backend/activity_watchings:
-      # index: "Activités surveillées"
+    backend/activity_watchings: #?
     backend/affairs:
       # index: "Transactions"
       # select: "Ajouter une transaction"
@@ -460,6 +459,7 @@ spa:
       # index: "Chaînes de production"
       # new: "Ajouter une nouvelle chaîne de production"
       # show: "Chaîne de production\_: %{name}"
+    backend/productions: #?
     backend/products:
       # edit: "Modifier un produit"
       # index: "Produits"
